Replace hero with illustrated Newport Bridge, better aspect ratio

--- a/index.html
+++ b/index.html
@@ -588,16 +588,14 @@
 
         /* Hero Section */
         .hero {
-            min-height: 50vh;
+            min-height: 80vh;
             padding: 0;
             position: relative;
             display: flex;
             align-items: flex-end;
             justify-content: flex-start;
             overflow: hidden;
-            background: 
-                url('newport-bridge.png') center top / contain no-repeat,
-                linear-gradient(to bottom, #0d1a2d 0%, var(--bg-dark) 100%);
+            background: url('newport-bridge.png') center center / cover no-repeat;
         }
 
         /* Gradient overlay for text readability */
@@ -610,16 +608,15 @@
             bottom: 0;
             background: linear-gradient(
                 to top,
-                rgba(10, 10, 15, 0.95) 0%,
-                rgba(10, 10, 15, 0.7) 30%,
-                rgba(10, 10, 15, 0.2) 60%,
-                transparent 100%
+                rgba(10, 10, 20, 0.9) 0%,
+                rgba(10, 10, 20, 0.5) 25%,
+                transparent 50%
             );
             pointer-events: none;
             z-index: 1;
         }
 
-        /* Subtle side vignette */
+        /* Subtle left vignette for text area */
         .hero::after {
             content: '';
             position: absolute;
@@ -629,9 +626,8 @@
             bottom: 0;
             background: linear-gradient(
                 to right,
-                rgba(10, 10, 15, 0.4) 0%,
-                transparent 50%,
-                transparent 100%
+                rgba(10, 10, 20, 0.5) 0%,
+                transparent 40%
             );
             pointer-events: none;
             z-index: 2;
