--- a/draftbridge/taskpane/style-showcase.html
+++ b/draftbridge/taskpane/style-showcase.html
@@ -271,7 +271,7 @@
                 <div class="color-preview" style="background: var(--df-primary);"></div>
                 <div class="color-info">
                     <div class="color-name">Primary</div>
-                    <div class="color-value">#0051E6</div>
+                    <div class="color-value">#0115F5</div>
                 </div>
             </div>
             <div class="color-swatch">
@@ -285,7 +285,7 @@
                 <div class="color-preview" style="background: var(--df-primary-light);"></div>
                 <div class="color-info">
                     <div class="color-name">Primary Light</div>
-                    <div class="color-value">#4C82E6</div>
+                    <div class="color-value">#4E5CF5</div>
                 </div>
             </div>
             <div class="color-swatch">
