--- a/guide-clawdbot.html
+++ b/guide-clawdbot.html
@@ -19,7 +19,7 @@
     <style>
         /* Guide-specific styles */
         .guide-hero {
-            background: linear-gradient(135deg, #0051E6 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #0115F5 0%, #0AB2F5 100%);
             padding: 6rem 0 4rem;
             position: relative;
             overflow: hidden;
@@ -80,13 +80,13 @@
             gap: 15px;
             margin: 50px 0 25px 0;
             padding-bottom: 15px;
-            border-bottom: 2px solid #019BE6;
+            border-bottom: 2px solid #0062F5;
         }
 
         .section-icon {
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #0051E6 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #0115F5 0%, #0AB2F5 100%);
             border-radius: 12px;
             display: flex;
             align-items: center;
@@ -124,7 +124,7 @@
         .step-number {
             width: 36px;
             height: 36px;
-            background: linear-gradient(135deg, #0051E6 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #0115F5 0%, #0AB2F5 100%);
             color: white;
             border-radius: 10px;
             display: flex;
@@ -156,7 +156,7 @@
         }
 
         .tag-mac {
-            background: linear-gradient(135deg, #4C82E6 0%, #1d4ed8 100%);
+            background: linear-gradient(135deg, #4E5CF5 0%, #1d4ed8 100%);
             color: white;
         }
 
@@ -241,7 +241,7 @@
         code {
             font-family: 'JetBrains Mono', monospace;
             background: #1e293b;
-            color: #019BE6;
+            color: #0062F5;
             padding: 2px 6px;
             border-radius: 4px;
             font-size: 12px;
@@ -290,11 +290,11 @@
 
         .alert-info {
             background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%);
-            border: 1px solid #4C82E6;
+            border: 1px solid #4E5CF5;
         }
 
         .alert-info .alert-icon {
-            background: #4C82E6;
+            background: #4E5CF5;
             color: white;
         }
 
@@ -335,7 +335,7 @@
         .paywall-card .price {
             font-size: 3rem;
             font-weight: 800;
-            background: linear-gradient(135deg, #0051E6 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #0115F5 0%, #0AB2F5 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -374,7 +374,7 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
-            background: linear-gradient(135deg, #0051E6 0%, #00E1E6 100%);
+            background: linear-gradient(135deg, #0115F5 0%, #0AB2F5 100%);
             color: white;
             padding: 15px 40px;
             border-radius: 12px;
@@ -511,7 +511,7 @@
     <main class="guide-content">
 
         <!-- What You'll Build -->
-        <div class="guide-card" style="background: linear-gradient(135deg, #0051E6 0%, #00E1E6 100%); color: white;">
+        <div class="guide-card" style="background: linear-gradient(135deg, #0115F5 0%, #0AB2F5 100%); color: white;">
             <h3 style="color: white; margin-bottom: 15px;">What You'll Build</h3>
             <ul style="list-style: none; padding: 0; margin: 0;">
                 <li style="padding: 8px 0; display: flex; align-items: center; gap: 10px;">
@@ -1100,9 +1100,9 @@ sudo apt install -y google-chrome-stable</code></pre>
         <div class="container">
             <p>&copy; 2026 Elevate IT Rhode Island. All rights reserved.</p>
             <p style="margin-top: 10px;">
-                <a href="index.html" style="color: #019BE6;">Home</a> &bull;
-                <a href="contact.html" style="color: #019BE6;">Contact</a> &bull;
-                <a href="https://github.com/clawdbot/clawdbot" target="_blank" style="color: #019BE6;">Clawdbot GitHub</a>
+                <a href="index.html" style="color: #0062F5;">Home</a> &bull;
+                <a href="contact.html" style="color: #0062F5;">Contact</a> &bull;
+                <a href="https://github.com/clawdbot/clawdbot" target="_blank" style="color: #0062F5;">Clawdbot GitHub</a>
             </p>
         </div>
     </footer>
