--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
         }
 
         .btn-secondary {
-            --glow-color: #4C82E6;
+            --glow-color: #4E5CF5;
             --glow-spread: rgba(76, 130, 230, 0.4);
             --btn-bg: rgba(0, 81, 230, 0.2);
             background-color: var(--btn-bg);
@@ -2977,7 +2977,7 @@
 
         .carousel-card .card-badge.fun {
             background: rgba(168, 85, 247, 0.2);
-            color: #4C82E6;
+            color: #4E5CF5;
             border: 1px solid rgba(168, 85, 247, 0.3);
         }
 
@@ -7724,7 +7724,7 @@
     scene.add(cable2);
 
     // Robot 3: Purple robot carrying data (walking)
-    const robot3 = createRobot(0x4C82E6, 0x0AB2F5);
+    const robot3 = createRobot(0x4E5CF5, 0x0AB2F5);
     robot3.position.set(1.5, 0.05, 2.5);
     robot3.rotation.y = Math.PI * 0.2;
     robot3.scale.setScalar(0.8);
@@ -7734,7 +7734,7 @@
     // Data tablet the robot is carrying
     const tablet = new THREE.Mesh(
         new THREE.BoxGeometry(0.15, 0.22, 0.01),
-        new THREE.MeshStandardMaterial({ color: 0x4C82E6, emissive: 0x4C82E6, emissiveIntensity: 0.4 })
+        new THREE.MeshStandardMaterial({ color: 0x4E5CF5, emissive: 0x4E5CF5, emissiveIntensity: 0.4 })
     );
     tablet.position.set(1.5, 0.35, 2.35);
     tablet.rotation.y = Math.PI * 0.2;
