--- a/knowledge-graphs.html
+++ b/knowledge-graphs.html
@@ -24,9 +24,9 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #0051E6;
-            --primary-light: #4C82E6;
-            --accent: #00E1E6;
+            --primary: #0115F5;
+            --primary-light: #4E5CF5;
+            --accent: #0AB2F5;
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
             --text: #f8fafc;
@@ -273,8 +273,8 @@
             </div>
             <svg id="graph-svg"></svg>
             <div class="graph-legend">
-                <div class="legend-item"><div class="legend-dot" style="background: #0051E6;"></div> Company</div>
-                <div class="legend-item"><div class="legend-dot" style="background: #00E1E6;"></div> Person</div>
+                <div class="legend-item"><div class="legend-dot" style="background: #0115F5;"></div> Company</div>
+                <div class="legend-item"><div class="legend-dot" style="background: #0AB2F5;"></div> Person</div>
                 <div class="legend-item"><div class="legend-dot" style="background: #10b981;"></div> Product</div>
                 <div class="legend-item"><div class="legend-dot" style="background: #f59e0b;"></div> Location</div>
             </div>
@@ -474,8 +474,8 @@
         ];
 
         const typeColors = {
-            company: "#0051E6",
-            person: "#00E1E6",
+            company: "#0115F5",
+            person: "#0AB2F5",
             product: "#10b981",
             location: "#f59e0b"
         };
@@ -513,7 +513,7 @@
             .attr("stroke-width", 2)
             .attr("marker-end", "url(#arrowhead)")
             .on("mouseover", function(event, d) {
-                d3.select(this).attr("stroke", "#00E1E6").attr("stroke-width", 3);
+                d3.select(this).attr("stroke", "#0AB2F5").attr("stroke-width", 3);
                 tooltip.transition().duration(200).style("opacity", 1);
                 tooltip.html(`<strong>${d.source.id || d.source}</strong> → ${d.relation} → <strong>${d.target.id || d.target}</strong>`)
                     .style("left", (event.pageX + 10) + "px")
