--- a/restaurant-scheduler-fixed.html
+++ b/restaurant-scheduler-fixed.html
@@ -13,7 +13,7 @@
             --text-secondary: #4b5563;
             --text-muted: #6b7280;
             --border-color: #e5e7eb;
-            --accent: #0051E6;
+            --accent: #0115F5;
             --accent-hover: #1d4ed8;
             --accent-light: #dbeafe;
             --success: #059669;
@@ -26,8 +26,8 @@
             --info-light: #e0f2fe;
             
             /* Professional muted role colors - using subtle indicators */
-            --role-server: #0051E6;
-            --role-cook: #0051E6;
+            --role-server: #0115F5;
+            --role-cook: #0115F5;
             --role-host: #06b6d4;
             --role-bartender: #f59e0b;
             --role-busser: #10b981;
