--- a/ri-heatmap.html
+++ b/ri-heatmap.html
@@ -10,7 +10,7 @@
         body { margin: 0; font-family: system-ui; }
         #map { height: 100vh; }
         .controls { position: absolute; top: 10px; right: 10px; z-index: 1000; background: #0f172a; color: #e2e8f0; padding: 15px; border-radius: 12px; max-width: 280px; box-shadow: 0 4px 20px rgba(0,0,0,0.3); }
-        .controls h3 { margin: 0 0 10px; color: #0051E6; }
+        .controls h3 { margin: 0 0 10px; color: #0115F5; }
         .controls label { display: block; margin: 8px 0; font-size: 0.9rem; cursor: pointer; }
         .controls select { width: 100%; padding: 8px; background: #1e293b; border: 1px solid #334155; color: #e2e8f0; border-radius: 6px; margin-top: 4px; }
         .stat { background: rgba(99,102,241,0.2); padding: 10px; border-radius: 8px; margin: 10px 0; font-size: 0.85rem; }
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <a href="https://aibridges.org" style="position:absolute;top:10px;left:10px;z-index:1001;background:#0051E6;padding:8px 16px;border-radius:8px;color:white;text-decoration:none;font-weight:600;box-shadow:0 2px 10px rgba(0,0,0,0.3)">← Home</a>
+    <a href="https://aibridges.org" style="position:absolute;top:10px;left:10px;z-index:1001;background:#0115F5;padding:8px 16px;border-radius:8px;color:white;text-decoration:none;font-weight:600;box-shadow:0 2px 10px rgba(0,0,0,0.3)">← Home</a>
     <a href="ri-report.html" style="position:absolute;top:10px;left:100px;z-index:1001;background:#10b981;padding:8px 16px;border-radius:8px;color:white;text-decoration:none;font-weight:600;box-shadow:0 2px 10px rgba(0,0,0,0.3)">📊 Report</a>
     <div id="map"></div>
     <div class="controls">
@@ -54,8 +54,8 @@
     </div>
     <div class="legend">
         <strong>Marker Colors</strong>
-        <div class="legend-row"><i style="background:#0008E6"></i> $1M+</div>
-        <div class="legend-row"><i style="background:#00E1E6"></i> $750K-$1M</div>
+        <div class="legend-row"><i style="background:#3B00F5"></i> $1M+</div>
+        <div class="legend-row"><i style="background:#0AB2F5"></i> $750K-$1M</div>
         <div class="legend-row"><i style="background:#f59e0b"></i> $500K-$750K</div>
         <div class="legend-row"><i style="background:#10b981"></i> $300K-$500K</div>
         <div class="legend-row"><i style="background:#06b6d4"></i> Under $300K</div>
@@ -70,8 +70,8 @@ const P=
         }).addTo(map);
         
         function priceColor(price) {
-            if (price >= 1000000) return '#0008E6';
-            if (price >= 750000) return '#00E1E6';
+            if (price >= 1000000) return '#3B00F5';
+            if (price >= 750000) return '#0AB2F5';
             if (price >= 500000) return '#f59e0b';
             if (price >= 300000) return '#10b981';
             return '#06b6d4';
@@ -105,7 +105,7 @@ const P=
                     <strong style="color:${color};font-size:1.1em">$${p.price.toLocaleString()}</strong><br>
                     ${p.type}<br>
                     ${p.beds} bed, ${p.baths} bath<br>
-                    ${p.url ? `<a href="${p.url}" target="_blank" style="color:#0051E6">View on Redfin →</a>` : ''}
+                    ${p.url ? `<a href="${p.url}" target="_blank" style="color:#0115F5">View on Redfin →</a>` : ''}
                 `);
                 markers.addLayer(m);
             });
