--- a/ouroboros/research-paper.html
+++ b/ouroboros/research-paper.html
@@ -11,8 +11,8 @@
             --border: #334155;
             --text: #e2e8f0;
             --muted: #94a3b8;
-            --accent: #4C82E6;
-            --accent2: #00E1E6;
+            --accent: #4E5CF5;
+            --accent2: #0AB2F5;
             --green: #34d399;
             --code-bg: #0d1117;
         }
