--- a/ri-deal-map.html
+++ b/ri-deal-map.html
@@ -15,7 +15,7 @@
     .deal-popup .predicted { color: #6b7280; font-size: 12px; }
     .deal-popup .score { background: linear-gradient(135deg, #10b981, #059669); color: white; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-top: 5px; }
     .deal-popup .details { color: #374151; margin-top: 5px; }
-    .deal-popup a { color: #0051E6; text-decoration: none; display: block; margin-top: 8px; }
+    .deal-popup a { color: #0115F5; text-decoration: none; display: block; margin-top: 8px; }
     .deal-popup a:hover { text-decoration: underline; }
     .legend { position: absolute; bottom: 30px; right: 10px; background: rgba(15,23,42,0.95); padding: 12px 16px; border-radius: 8px; z-index: 1000; color: #e2e8f0; font-size: 12px; border: 1px solid #334155; }
     .legend h4 { margin-bottom: 8px; color: #f8fafc; }
