--- a/ri-report-docs.html
+++ b/ri-report-docs.html
@@ -15,7 +15,7 @@
       line-height: 1.6;
     }
     .container { max-width: 900px; margin: 0 auto; }
-    h1 { color: #019BE6; margin-bottom: 0.5rem; font-size: 2.5rem; }
+    h1 { color: #0062F5; margin-bottom: 0.5rem; font-size: 2.5rem; }
     h2 { color: #10b981; margin: 2rem 0 1rem; border-bottom: 2px solid rgba(16,185,129,0.3); padding-bottom: 0.5rem; }
     h3 { color: #f59e0b; margin: 1.5rem 0 0.75rem; }
     p { margin-bottom: 1rem; color: #94a3b8; }
@@ -24,7 +24,7 @@
       padding: 0.2rem 0.5rem;
       border-radius: 4px;
       font-family: 'Fira Code', monospace;
-      color: #019BE6;
+      color: #0062F5;
     }
     pre {
       background: #0f172a;
@@ -55,10 +55,10 @@
     }
     table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
     th, td { padding: 0.75rem; text-align: left; border-bottom: 1px solid rgba(99,102,241,0.2); }
-    th { color: #019BE6; background: rgba(99,102,241,0.1); }
+    th { color: #0062F5; background: rgba(99,102,241,0.1); }
     ul, ol { margin: 1rem 0 1rem 1.5rem; color: #94a3b8; }
     li { margin: 0.5rem 0; }
-    a { color: #0051E6; text-decoration: none; }
+    a { color: #0115F5; text-decoration: none; }
     a:hover { text-decoration: underline; }
     .toc { background: rgba(99,102,241,0.1); padding: 1rem; border-radius: 8px; margin: 1rem 0; }
     .toc a { display: block; padding: 0.3rem 0; }
@@ -70,7 +70,7 @@
       font-weight: 600;
     }
     .badge-done { background: #10b981; color: white; }
-    .badge-new { background: #0051E6; color: white; }
+    .badge-new { background: #0115F5; color: white; }
     .badge-perf { background: #f59e0b; color: black; }
   </style>
 </head>
@@ -81,7 +81,7 @@
     <p><em>Last updated: July 18, 2025</em></p>
     
     <nav class="toc">
-      <strong style="color:#019BE6">📚 Table of Contents</strong>
+      <strong style="color:#0062F5">📚 Table of Contents</strong>
       <a href="#architecture">1. Architecture Overview</a>
       <a href="#data-flow">2. Data Flow & Loading</a>
       <a href="#optimizations">3. Performance Optimizations</a>
