--- a/sell-your-home.html
+++ b/sell-your-home.html
@@ -37,7 +37,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 700;
-            background: linear-gradient(135deg, #0051E6, #0051E6);
+            background: linear-gradient(135deg, #0115F5, #0115F5);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             text-decoration: none;
@@ -55,7 +55,7 @@
         }
         .nav-links a:hover { color: #e2e8f0; }
         .nav-cta {
-            background: linear-gradient(135deg, #0051E6, #4f46e5);
+            background: linear-gradient(135deg, #0115F5, #4f46e5);
             padding: 0.5rem 1rem;
             border-radius: 8px;
             color: white !important;
@@ -204,7 +204,7 @@
             color: #64748b;
             font-size: 0.85rem;
         }
-        .footer a { color: #0051E6; }
+        .footer a { color: #0115F5; }
     </style>
 </head>
 <body>
@@ -258,7 +258,7 @@
                         </div>
                         <div style="color:#10b981;font-weight:bold;margin-top:0.5rem">You save: $29,951 💰</div>
                     </div>
-                    <div style="margin-top:1rem;padding:0.75rem;background:rgba(99,102,241,0.15);border-radius:8px;font-size:0.85rem;color:#019BE6">
+                    <div style="margin-top:1rem;padding:0.75rem;background:rgba(99,102,241,0.15);border-radius:8px;font-size:0.85rem;color:#0062F5">
                         💡 <strong>No broker license needed</strong> — you're selling your own property. We just help you find buyers.
                     </div>
                 </div>
@@ -392,7 +392,7 @@
                         ${l.description ? `<p style="color:#94a3b8;font-size:0.85rem;margin-bottom:0.75rem">${l.description.substring(0, 100)}${l.description.length > 100 ? '...' : ''}</p>` : ''}
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-top:0.5rem">
                             <span style="color:#64748b;font-size:0.75rem">${daysAgo} days ago</span>
-                            <button onclick="contactSeller(${idx})" style="background:#0051E6;padding:0.4rem 0.8rem;font-size:0.8rem">📧 Contact</button>
+                            <button onclick="contactSeller(${idx})" style="background:#0115F5;padding:0.4rem 0.8rem;font-size:0.8rem">📧 Contact</button>
                         </div>
                     </div>
                 </div>`;
