--- a/swiftshot-privacy.html
+++ b/swiftshot-privacy.html
@@ -6,7 +6,7 @@
     <title>Privacy Policy - SwiftShot | AIBridges</title>
     <meta name="description" content="Privacy policy for SwiftShot Chrome extension. 100% local processing, no data collection, no tracking.">
 
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230051E6'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230115F5'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +21,9 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #0051E6;
+            --primary: #0115F5;
             --primary-hover: #4f46e5;
-            --accent: #00E1E6;
+            --accent: #0AB2F5;
             --success: #10b981;
             --warning: #f59e0b;
         }
@@ -396,7 +396,7 @@
 
         <!-- OCR Processing -->
         <div class="section">
-            <h2><i class="fas fa-font" style="background: rgba(0, 81, 230, 0.15); color: #019BE6;"></i> OCR Text Extraction</h2>
+            <h2><i class="fas fa-font" style="background: rgba(0, 81, 230, 0.15); color: #0062F5;"></i> OCR Text Extraction</h2>
             <p>Optical character recognition (OCR) is performed entirely on your device using <strong>Tesseract.js</strong>, an open-source library that runs in the browser. No images or extracted text are sent to any external server for processing.</p>
             <p>The OCR engine, language data, and all processing run locally within the extension's context. Extracted text remains in your browser and is only included in exports that you manually save to your device.</p>
         </div>
@@ -474,7 +474,7 @@
 
         <!-- Children -->
         <div class="section">
-            <h2><i class="fas fa-child" style="background: rgba(0, 81, 230, 0.15); color: #019BE6;"></i> Children's Privacy</h2>
+            <h2><i class="fas fa-child" style="background: rgba(0, 81, 230, 0.15); color: #0062F5;"></i> Children's Privacy</h2>
             <p>SwiftShot is a general-purpose productivity tool. We do not knowingly collect any personal information from anyone, including children under the age of 13. Since no personal data is collected or transmitted, no special provisions are necessary under COPPA.</p>
         </div>
 
