--- a/index-new.html
+++ b/index-new.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Your AI workforce starts here. We build and deploy Claude agents that handle real work 24/7.">
     <meta property="og:image" content="https://aibridges.org/og-image.png">
     <meta name="theme-color" content="#0f172a">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='8' fill='%230f172a'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='%234E5CF5'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230f172a'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='8' fill='%230f172a'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='%234C82E6'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230f172a'/%3E%3C/svg%3E">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
     <style>
@@ -21,9 +21,9 @@
             --border: #334155;
             --text: #f8fafc;
             --muted: #94a3b8;
-            --primary: #4E5CF5;
-            --primary-dark: #0115F5;
-            --accent: #0AB2F5;
+            --primary: #4C82E6;
+            --primary-dark: #0051E6;
+            --accent: #00E1E6;
             --success: #34d399;
         }
         
