--- a/ri-3d-scatter.html
+++ b/ri-3d-scatter.html
@@ -42,7 +42,7 @@
             min-width: 150px;
             cursor: pointer;
         }
-        select:hover { border-color: #0115F5; }
+        select:hover { border-color: #0051E6; }
         .checkbox-group {
             display: flex;
             gap: 1rem;
@@ -59,8 +59,8 @@
             border: 1px solid transparent;
             transition: all 0.2s;
         }
-        .checkbox-label:hover { border-color: #0115F5; }
-        .checkbox-label.active { background: rgba(99,102,241,0.3); border-color: #0115F5; }
+        .checkbox-label:hover { border-color: #0051E6; }
+        .checkbox-label.active { background: rgba(99,102,241,0.3); border-color: #0051E6; }
         .checkbox-label input { display: none; }
         .zoom-btn {
             background: rgba(99,102,241,0.2);
@@ -72,7 +72,7 @@
             font-size: 0.85rem;
             transition: all 0.2s;
         }
-        .zoom-btn:hover { background: rgba(99,102,241,0.4); border-color: #0115F5; }
+        .zoom-btn:hover { background: rgba(99,102,241,0.4); border-color: #0051E6; }
         .stats {
             margin-left: auto;
             display: flex;
@@ -87,7 +87,7 @@
             text-align: center;
             padding: 0.5rem;
             font-size: 1.1rem;
-            color: #0062F5;
+            color: #019BE6;
         }
     </style>
 </head>
