--- a/swiftshot.html
+++ b/swiftshot.html
@@ -27,13 +27,13 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #0115F5;
+            --primary: #0051E6;
             --primary-hover: #1d4ed8;
             --accent: #FBBF24;
             --accent-glow: rgba(251, 191, 36, 0.3);
             --success: #10b981;
             --warning: #f59e0b;
-            --vault: #0AB2F5;
+            --vault: #00E1E6;
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -669,7 +669,7 @@
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon" style="background: rgba(0, 81, 230, 0.1);"><i class="fas fa-font" style="color: #0062F5;"></i></div>
+                    <div class="feature-icon" style="background: rgba(0, 81, 230, 0.1);"><i class="fas fa-font" style="color: #019BE6;"></i></div>
                     <h3>OCR &amp; Word Export</h3>
                     <p>On-device text recognition. Extract text from screenshots and export directly to Word (.docx) documents with metadata.</p>
                     <span class="badge badge-pro">Pro</span>
