--- a/blog-it-support-rhode-island.html
+++ b/blog-it-support-rhode-island.html
@@ -25,9 +25,9 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #0115F5;
-            --primary-light: #4E5CF5;
-            --accent: #0AB2F5;
+            --primary: #0051E6;
+            --primary-light: #4C82E6;
+            --accent: #00E1E6;
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
             --text: #f8fafc;
