--- a/devscope.html
+++ b/devscope.html
@@ -25,14 +25,14 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #0115F5;
+            --primary: #0051E6;
             --primary-hover: #1d4ed8;
             --accent: #06b6d4;
             --critical: #ef4444;
             --error: #f87171;
             --warning: #fbbf24;
-            --info: #0AB2F5;
-            --network: #0062F5;
+            --info: #00E1E6;
+            --network: #019BE6;
             --success: #4ade80;
         }
 
@@ -179,7 +179,7 @@
         .logo-icon {
             width: 72px;
             height: 72px;
-            background: linear-gradient(135deg, var(--primary), #0AB2F5);
+            background: linear-gradient(135deg, var(--primary), #00E1E6);
             border-radius: 20px;
             display: flex;
             align-items: center;
