--- a/swiftshot-comparison.html
+++ b/swiftshot-comparison.html
@@ -17,9 +17,9 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #0115F5;
+            --primary: #0051E6;
             --primary-hover: #4f46e5;
-            --accent: #0AB2F5;
+            --accent: #00E1E6;
             --success: #10b981;
             --warning: #f59e0b;
         }
