New sunset purple color scheme: #8E44AD primary, #9B59B6 lavender, #4B2C5E plum, #1A1B4B deep indigo

--- a/blog-it-support-rhode-island.html
+++ b/blog-it-support-rhode-island.html
@@ -25,8 +25,8 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #0051E6;
-            --primary-light: #4C82E6;
+            --primary: #8E44AD;
+            --primary-light: #9B59B6;
             --accent: #00E1E6;
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
