--- a/devscope.html
+++ b/devscope.html
@@ -25,14 +25,14 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #0051E6;
+            --primary: #8E44AD;
             --primary-hover: #1d4ed8;
             --accent: #06b6d4;
             --critical: #ef4444;
             --error: #f87171;
             --warning: #fbbf24;
             --info: #00E1E6;
-            --network: #019BE6;
+            --network: #6C5CE7;
             --success: #4ade80;
         }
 
