--- a/ouroboros/colony-report-2026-02-09.html
+++ b/ouroboros/colony-report-2026-02-09.html
@@ -15,7 +15,7 @@
             --green: #3fb950;
             --yellow: #d29922;
             --red: #f85149;
-            --highlight: #019BE6;
+            --highlight: #6C5CE7;
         }
         
         * { box-sizing: border-box; margin: 0; padding: 0; }
