--- a/ouroboros/ouroboros-architecture.html
+++ b/ouroboros/ouroboros-architecture.html
@@ -15,7 +15,7 @@
       --green: #3fb950;
       --orange: #d29922;
       --red: #f85149;
-      --highlight: #4C82E6;
+      --highlight: #9B59B6;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
