--- a/ouroboros/research-paper.html
+++ b/ouroboros/research-paper.html
@@ -11,7 +11,7 @@
             --border: #334155;
             --text: #e2e8f0;
             --muted: #94a3b8;
-            --accent: #4C82E6;
+            --accent: #9B59B6;
             --accent2: #00E1E6;
             --green: #34d399;
             --code-bg: #0d1117;
