--- a/3d-office-widget.html
+++ b/3d-office-widget.html
@@ -77,7 +77,7 @@
 
     .service-panel .price {
       font-weight: 600;
-      color: #0051E6;
+      color: #8E44AD;
       font-size: 16px;
     }
 
@@ -135,7 +135,7 @@
     }
 
     .service-nav button.active {
-      background: #0051E6;
+      background: #8E44AD;
       color: white;
     }
 
@@ -177,7 +177,7 @@
     }
 
     .auto-rotate-btn.active {
-      background: #0051E6;
+      background: #8E44AD;
       color: white;
     }
 
@@ -227,7 +227,7 @@
       position: absolute;
       top: 16px;
       right: 16px;
-      background: linear-gradient(135deg, #0051E6 0%, #1d4ed8 100%);
+      background: linear-gradient(135deg, #8E44AD 0%, #1d4ed8 100%);
       color: white;
       padding: 10px 16px;
       border-radius: 10px;
@@ -297,7 +297,7 @@
       position: absolute;
       width: 8px;
       height: 8px;
-      background: #0051E6;
+      background: #8E44AD;
       border-radius: 50%;
       transition: all 0.3s;
       pointer-events: none;
