--- a/blog-sanctus-partnership-catholic-couples-app.html
+++ b/blog-sanctus-partnership-catholic-couples-app.html
@@ -27,8 +27,8 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #0051E6;
-            --primary-light: #4C82E6;
+            --primary: #8E44AD;
+            --primary-light: #9B59B6;
             --accent: #00E1E6;
             --gold: #C9A962;
             --gold-light: #d4b87a;
