--- a/colony-digest.html
+++ b/colony-digest.html
@@ -15,7 +15,7 @@
         }
         .header {
             background: rgba(15, 23, 42, 0.95);
-            border-bottom: 2px solid #0051E6;
+            border-bottom: 2px solid #8E44AD;
             padding: 2rem;
             text-align: center;
         }
@@ -26,7 +26,7 @@
             margin-bottom: 0.5rem;
         }
         .header .subtitle {
-            color: #0051E6;
+            color: #8E44AD;
             font-size: 1.1rem;
             font-style: italic;
         }
@@ -37,7 +37,7 @@
         .container { max-width: 900px; margin: 0 auto; padding: 2rem; }
         .intro {
             background: rgba(0, 81, 230, 0.1);
-            border-left: 4px solid #0051E6;
+            border-left: 4px solid #8E44AD;
             padding: 1.5rem;
             margin-bottom: 2rem;
             font-size: 1.1rem;
@@ -71,13 +71,13 @@
         }
         .applicable {
             background: rgba(236, 72, 153, 0.2);
-            color: #019BE6;
+            color: #6C5CE7;
             padding: 0.3rem 0.75rem;
             border-radius: 20px;
         }
         .section { margin-bottom: 1.5rem; }
         .section-label {
-            color: #0051E6;
+            color: #8E44AD;
             font-size: 0.85rem;
             text-transform: uppercase;
             letter-spacing: 0.1em;
@@ -101,14 +101,14 @@
             content: "→";
             position: absolute;
             left: 0;
-            color: #0051E6;
+            color: #8E44AD;
         }
         .connections {
             background: rgba(0, 81, 230, 0.1);
             padding: 1rem;
             border-radius: 8px;
             font-size: 0.95rem;
-            color: #019BE6;
+            color: #6C5CE7;
         }
         .footer {
             text-align: center;
@@ -116,7 +116,7 @@
             color: #64748b;
             font-size: 0.9rem;
         }
-        .footer a { color: #0051E6; }
+        .footer a { color: #8E44AD; }
         .loading { text-align: center; padding: 4rem; color: #64748b; }
         .snake { font-size: 2rem; animation: pulse 2s infinite; display: inline-block; }
         @keyframes pulse {
