--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
     <meta name="theme-color" content="#0a0a0f">
 
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230051E6'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%238E44AD'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,8 +32,8 @@
         }
 
         :root {
-            --primary: #0051E6;
-            --primary-light: #4C82E6;
+            --primary: #8E44AD;
+            --primary-light: #9B59B6;
             --accent: #00E1E6;
             --accent-glow: rgba(34, 211, 238, 0.3);
             --bg-dark: #0a0a0f;
