--- a/docforge/taskpane-docforge.html
+++ b/docforge/taskpane-docforge.html
@@ -14,7 +14,7 @@
     
     <style>
         :root {
-            --primary: #0051E6;
+            --primary: #8E44AD;
             --primary-hover: #1d4ed8;
             --text: #1f2937;
             --text-muted: #6b7280;
