--- a/index-backup.html
+++ b/index-backup.html
@@ -26,8 +26,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <!-- Favicon - Inline SVG Data URL -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230051E6'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%230051E6'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%238E44AD'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%238E44AD'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,8 +41,8 @@
         }
 
         :root {
-            --primary: #0051E6;
-            --primary-light: #4C82E6;
+            --primary: #8E44AD;
+            --primary-light: #9B59B6;
             --accent: #00E1E6;
             --accent-glow: rgba(34, 211, 238, 0.3);
             --bg-dark: #0a0a0f;
@@ -2446,7 +2446,7 @@
 
         .carousel-card .card-badge.fun {
             background: rgba(168, 85, 247, 0.2);
-            color: #4C82E6;
+            color: #9B59B6;
             border: 1px solid rgba(168, 85, 247, 0.3);
         }
 
@@ -5119,7 +5119,7 @@
         ctx.font = '14px monospace';
         ctx.fillStyle = '#4ade80';
         ctx.fillText('> AI-powered solutions', 20, 200);
-        ctx.fillStyle = '#019BE6';
+        ctx.fillStyle = '#6C5CE7';
         ctx.fillText('> Cloud & security', 20, 225);
         ctx.fillStyle = '#a78bfa';
         ctx.fillText('> Local Cranston support', 20, 250);
@@ -5751,10 +5751,10 @@
         // Node definitions
         const nodes = [
             { x: 50, y: 120, label: 'RSS Feed', icon: '📡', color: '#ff6b35' },
-            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#0051E6' },
-            { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#4C82E6' },
+            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#8E44AD' },
+            { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#9B59B6' },
             { x: 410, y: 120, label: 'Filter', icon: '⚡', color: '#10b981' },
-            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#0051E6' },
+            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#8E44AD' },
             { x: 530, y: 170, label: 'Review', icon: '📊', color: '#22c55e' },
             { x: 630, y: 70, label: 'Post', icon: '📤', color: '#1d9bf0' },
         ];
@@ -5863,7 +5863,7 @@
         const stats = [
             { label: 'Executions', value: '1,247', color: '#10b981' },
             { label: 'Success Rate', value: '98.2%', color: '#10b981' },
-            { label: 'Posts Created', value: '892', color: '#4C82E6' },
+            { label: 'Posts Created', value: '892', color: '#9B59B6' },
             { label: 'For Review', value: '34', color: '#f59e0b' }
         ];
 
@@ -6420,7 +6420,7 @@
         const animProgress = (time % 8000) / 8000;
 
         // Box 1: Data Input
-        wbCtx.strokeStyle = '#0051E6';
+        wbCtx.strokeStyle = '#8E44AD';
         wbCtx.lineWidth = 2;
         wbCtx.strokeRect(40, 80, 100, 50);
         wbCtx.font = '12px Arial';
@@ -6448,7 +6448,7 @@
 
         // Box 2: AI Processing
         if (animProgress > 0.25) {
-            wbCtx.strokeStyle = '#0051E6';
+            wbCtx.strokeStyle = '#8E44AD';
             wbCtx.lineWidth = 2;
             wbCtx.strokeRect(200, 80, 120, 50);
             wbCtx.font = '12px Arial';
@@ -6459,7 +6459,7 @@
             wbCtx.save();
             wbCtx.translate(300, 105);
             wbCtx.rotate(time / 500);
-            wbCtx.strokeStyle = '#0051E6';
+            wbCtx.strokeStyle = '#8E44AD';
             wbCtx.beginPath();
             wbCtx.arc(0, 0, 8, 0, Math.PI * 2);
             wbCtx.stroke();
@@ -6502,7 +6502,7 @@
         wbCtx.fillText('Efficiency Gains', 50, 180);
 
         const bars = [
-            { label: 'Speed', value: 85, color: '#0051E6' },
+            { label: 'Speed', value: 85, color: '#8E44AD' },
             { label: 'Accuracy', value: 92, color: '#06b6d4' },
             { label: 'Cost', value: 70, color: '#22c55e' }
         ];
