--- a/knowledge-graphs.html
+++ b/knowledge-graphs.html
@@ -24,8 +24,8 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #0051E6;
-            --primary-light: #4C82E6;
+            --primary: #8E44AD;
+            --primary-light: #9B59B6;
             --accent: #00E1E6;
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
@@ -273,7 +273,7 @@
             </div>
             <svg id="graph-svg"></svg>
             <div class="graph-legend">
-                <div class="legend-item"><div class="legend-dot" style="background: #0051E6;"></div> Company</div>
+                <div class="legend-item"><div class="legend-dot" style="background: #8E44AD;"></div> Company</div>
                 <div class="legend-item"><div class="legend-dot" style="background: #00E1E6;"></div> Person</div>
                 <div class="legend-item"><div class="legend-dot" style="background: #10b981;"></div> Product</div>
                 <div class="legend-item"><div class="legend-dot" style="background: #f59e0b;"></div> Location</div>
@@ -474,7 +474,7 @@
         ];
 
         const typeColors = {
-            company: "#0051E6",
+            company: "#8E44AD",
             person: "#00E1E6",
             product: "#10b981",
             location: "#f59e0b"
