--- a/ouroboros/colony-report-2026-02-13.html
+++ b/ouroboros/colony-report-2026-02-13.html
@@ -57,7 +57,7 @@
         }
         .stat-value.orange { color: #ff9f43; }
         .stat-value.blue { color: #54a0ff; }
-        .stat-value.highlight-text { color: #0051E6; }
+        .stat-value.highlight-text { color: #8E44AD; }
         .stat-label {
             color: rgba(255,255,255,0.6);
             font-size: 0.95rem;
