--- a/restaurant-scheduler.html
+++ b/restaurant-scheduler.html
@@ -13,7 +13,7 @@
             --text-secondary: #4b5563;
             --text-muted: #6b7280;
             --border-color: #e5e7eb;
-            --accent: #0051E6;
+            --accent: #8E44AD;
             --accent-hover: #1d4ed8;
             --accent-light: #dbeafe;
             --success: #059669;
@@ -26,8 +26,8 @@
             --info-light: #e0f2fe;
             
             /* Professional muted role colors - using subtle indicators */
-            --role-server: #0051E6;
-            --role-cook: #0051E6;
+            --role-server: #8E44AD;
+            --role-cook: #8E44AD;
             --role-host: #06b6d4;
             --role-bartender: #f59e0b;
             --role-busser: #10b981;
@@ -1775,7 +1775,7 @@
         .login-logo .icon {
             width: 64px;
             height: 64px;
-            background: linear-gradient(135deg, #0051E6, #1d4ed8);
+            background: linear-gradient(135deg, #8E44AD, #1d4ed8);
             border-radius: 16px;
             display: flex;
             align-items: center;
@@ -1814,13 +1814,13 @@
 
         .login-form input:focus {
             outline: none;
-            border-color: #0051E6;
+            border-color: #8E44AD;
             box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
         }
 
         .login-form .btn-login {
             padding: 14px;
-            background: linear-gradient(135deg, #0051E6, #1d4ed8);
+            background: linear-gradient(135deg, #8E44AD, #1d4ed8);
             color: white;
             border: none;
             border-radius: 8px;
@@ -1855,7 +1855,7 @@
         }
 
         .login-toggle a {
-            color: #0051E6;
+            color: #8E44AD;
             cursor: pointer;
             text-decoration: none;
         }
@@ -1881,11 +1881,11 @@
         }
 
         .role-option:hover {
-            border-color: #0051E6;
+            border-color: #8E44AD;
         }
 
         .role-option.selected {
-            border-color: #0051E6;
+            border-color: #8E44AD;
             background: #eff6ff;
         }
 
