--- a/ri-tax-sales.html
+++ b/ri-tax-sales.html
@@ -52,7 +52,7 @@
         .results { max-height: 500px; overflow-y: auto; border-radius: 12px; }
         
         .info-box { background: rgba(99,102,241,0.15); border: 1px solid rgba(99,102,241,0.3); border-radius: 12px; padding: 1.5rem; margin: 1.5rem 0; }
-        .info-box h3 { color: #4C82E6; margin-bottom: 0.5rem; }
+        .info-box h3 { color: #9B59B6; margin-bottom: 0.5rem; }
         
         .tip-box { background: rgba(16,185,129,0.15); border: 1px solid rgba(16,185,129,0.3); border-radius: 12px; padding: 1.5rem; margin: 1.5rem 0; }
         .tip-box h3 { color: #10b981; margin-bottom: 0.5rem; }
