--- a/service-aws.html
+++ b/service-aws.html
@@ -23,8 +23,8 @@
 
     <style>
         :root {
-            --primary: #0051E6;
-            --primary-light: #4C82E6;
+            --primary: #8E44AD;
+            --primary-light: #9B59B6;
             --accent: #00E1E6;
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
